--- a/st.clab.yml
+++ b/st.clab.yml
@@ -1,7 +1,7 @@
 # Copyright 2020 Nokia
 # Licensed under the BSD 3-Clause License.
 # SPDX-License-Identifier: BSD-3-Clause
-
+# Modified
 name: st # short for streaming telemetry ;)
 prefix: ""
 
